<resources>
    <string name="app_name">HappyCard</string>
    <string name="rectangle_desc">A Rectangle</string>
    <string name="text_desc">A Text</string>
    <string name="text_content">Hello World</string>
    <string name="text_input_placeholder">Hello World</string>
    <string name="text_coffee_store_title">STAR-FUCKS</string>
    <string name="text_topping_title">TOPPINGS</string>
    <string name="text_topping_option_a">STAR-FUCKS</string>
    <string name="text_topping_option_b">STAR-FUCKS</string>
    <string name="text_topping_option_c">STAR-FUCKS</string>
    <string name="btn_quantity_add">+</string>
    <string name="btn_quantity_sub">-</string>
    <string name="btn_quantity_order">Order</string>
</resources>