<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jferroal.happycard.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            style="@style/BgImg"
            android:src="@drawable/flower" />
        <TextView
            android:id="@+id/text_title"
            style="@style/topTitle"
            android:text="@string/text_coffee_store_title"/>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/container_topping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_title"
            android:gravity="center" >

            <TextView
                style="@style/topTitle"
                android:text="@string/text_topping_title" />
            <CheckBox
                android:id="@+id/topping_option_a"
                style="@style/checkBox"
                android:onClick="onCheckboxClicked"
                android:text="@string/text_topping_option_a" />

            <CheckBox
                android:id="@+id/topping_option_b"
                style="@style/checkBox"
                android:onClick="onCheckboxClicked"
                android:text="@string/text_topping_option_b" />

            <CheckBox
                android:id="@+id/topping_option_c"
                style="@style/checkBox"
                android:onClick="onCheckboxClicked"
                android:text="@string/text_topping_option_b" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_topping"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_add"
                style="@style/quantityBtn"
                android:onClick="decrement"
                android:text="@string/btn_quantity_sub" />
            <TextView
                android:id="@+id/text_quantity"
                style="@style/bodyText"/>
            <Button
                android:id="@+id/btn_sub"
                style="@style/quantityBtn"
                android:onClick="increment"
                android:text="@string/btn_quantity_add" />
        </LinearLayout>
        <Button
            android:id="@+id/button_add"
            android:layout_below="@+id/container_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="submitOrder"
            android:text="@string/btn_quantity_order" />
        <ScrollView
            android:layout_below="@id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_message"
                style="@style/bodyText"
                android:maxLines="99"
                android:minLines="4" />
        </ScrollView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@color/colorAccent" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:text="@string/text_input_placeholder" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:srcCompat="@android:drawable/ic_input_add" />
    </LinearLayout>
</LinearLayout>
